Edited setup fro alpha release

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,12 @@
 [metadata]
-description-file = README.md 
+name = maddress
+version = 1.0.0-alpha
+author = Scott Draper
+author_email = draper.tscott@gmail.com
+description = This package provides developers with handy tools for email address data cleaning
+long_description = file: README.md
+long_description_content_type = text/markdown
+url = https://github.com/scottdraper8/maddress
+Programming Language :: Python :: 3
+License :: OSI Approved :: MIT License
+Operating System :: OS Independent
